--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^28.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.17.0",
-    "nodemon": "^2.0.15"
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "helmet": "^5.1.0",
     "knex": "^1.0.7",
     "knex-cleaner": "^1.3.1",
     "pg": "^8.7.3"
