--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "rlxp-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon index.js",
     "knex": "npx knex --knexfile config/knexfile.js",
     "migrate": "npx knex --knexfile config/knexfile.js migrate:latest",
     "rollback": "npx knex --knexfile config/knexfile.js migrate:rollback",
